--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,11 +7,6 @@ set(VERSION_MINOR 0)
 
 set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 
-set(BUILD_SHARED_LIBS OFF CACHE BOOL "Build with dynamic dependencies")
-if(NOT BUILD_SHARED_LIBS)
-  set(CMAKE_FIND_LIBRARY_SUFFIXES ".a")
-endif(NOT BUILD_SHARED_LIBS)
-
 set(SANITIZE OFF CACHE BOOL "Build with sanitizers")
 if(SANITIZE)
   message(STATUS "Building with sanitizers")
@@ -22,10 +17,6 @@ else(SANITIZE)
   message(STATUS "Building without sanitizers")
 endif(SANITIZE)
 
-#LibCURL
-find_package(CURL REQUIRED)
-include_directories(${CURL_INCLUDE_DIRS})
-
 # TinyDM Target
 set(SOURCE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/src)
 set(HEADER_DIR ${CMAKE_CURRENT_SOURCE_DIR}/include)
@@ -33,7 +24,7 @@ set(HEADER_DIR ${CMAKE_CURRENT_SOURCE_DIR}/include)
 file(GLOB_RECURSE SOURCE_FILES ${SOURCE_DIR}/*.cpp)
 
 add_executable(tinydm ${SOURCE_FILES})
-target_link_libraries(tinydm curl pthread ${CURL_LIBRARIES})
+target_link_libraries(tinydm curl pthread)
 target_include_directories(tinydm PRIVATE ${HEADER_DIR})
 
 set_property(TARGET tinydm PROPERTY CXX_STANDARD 14)
